# nebulaQueryAPI

./: CMakeLists.txt  README.md  query.cpp  query1.cpp  query1_performance.cpp  query1_simple_benchmark  query1_simple_benchmark.cpp  query2.cpp  query3.cpp  query4.cpp  query5.cpp  query6.cpp  queryCFA.cpp  queryCFAandCFF.cpp  queryCFF.cpp  querytrysamewindow.cpp  querytrysamewindowOneday.cpp
benchmark/: README.md  run_benchmarks.sh  visualize_results.py
benchmark_results/: benchmark_summary_mac.csv  benchmark_summary_raspberry_pi.csv
cmake/: FindNebulaStream.cmake  FindSpdlog.cmake  NebulaStreamConfig.cmake.in
config/: coordinator.yaml  e2e.yaml  sncb_query1_e2e.yaml  sncb_query2_e2e.yaml  sncb_query3_e2e.yaml  sncb_query4_e2e.yaml  sncb_query5_e2e.yaml  sncb_query6_e2e.yaml  worker.yaml
data/: high_risk_areas_ordered_unix.csv  weatherwithsynccoordinates.csv
